* correct top-bar breakpoints
I set the correct top-bar breakpoints so that the overflowing stops. Additionaly I corrected the twitter username.

--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -34,3 +34,6 @@ $on-laptop:        800px;
 $sidebar-width: 200px;
 
 $page-width: $content-width + $sidebar-width;
+
+$topbar-breakpoint: 725px; // Change to 9999px for always mobile layout
+$topbar-media-query: "only screen and (min-width: #{$topbar-breakpoint})" !default;
